// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs /:serviceName 1`] = `
Array [
  Object {
    "href": "#/?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "opbeans-node",
  },
]
`;

exports[`Breadcrumbs /:serviceName/errors 1`] = `
Array [
  Object {
    "href": "#/?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "opbeans-node",
  },
  Object {
    "href": "#/opbeans-node/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "Errors",
  },
]
`;

exports[`Breadcrumbs /:serviceName/errors/:groupId 1`] = `
Array [
  Object {
    "href": "#/?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "opbeans-node",
  },
  Object {
    "href": "#/opbeans-node/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "Errors",
  },
  Object {
    "href": "#/opbeans-node/errors/myGroupId?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "myGroupId",
  },
]
`;

exports[`Breadcrumbs /:serviceName/transactions 1`] = `
Array [
  Object {
    "href": "#/?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "opbeans-node",
  },
  Object {
    "href": "#/opbeans-node/transactions?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "Transactions",
  },
]
`;

exports[`Breadcrumbs /:serviceName/transactions/:transactionType 1`] = `
Array [
  Object {
    "href": "#/?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "opbeans-node",
  },
  Object {
    "href": "#/opbeans-node/transactions?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "Transactions",
  },
]
`;

exports[`Breadcrumbs /:serviceName/transactions/:transactionType/:transactionName 1`] = `
Array [
  Object {
    "href": "#/?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "APM",
  },
  Object {
    "href": "#/opbeans-node?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "opbeans-node",
  },
  Object {
    "href": "#/opbeans-node/transactions?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "Transactions",
  },
  Object {
    "href": "#/opbeans-node/transactions/request/my-transaction-name?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "my-transaction-name",
  },
]
`;

exports[`Breadcrumbs Homepage 1`] = `
Array [
  Object {
    "href": "#/?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&kuery=myKuery",
    "text": "APM",
  },
]
`;
